
----

Text:

A chronological list of major changes and updates.

Incremental changes and updates can be found in the project’s [commit log](https://github.com/splorp/newton-glossary/commits/master).

## Current Release

Version: 2.2.2
Terms: _$t
Sources: _$s

### Summary of changes:

+ Added new terms
+ Updated and expanded dozens of existing entries
+ Legacy domain links now redirect to [newtonglossary.com](http://newtonglossary.com/)

## 16 January 2017

Version: 2.2.1
Terms: 1,007
Sources: 95

### Summary of changes:

+ Added 36 new terms
+ Added 5 new sources
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version 2.4.1
+ Tweaked image display on individual [terms](/terms) and [sources](/sources)
+ Changed lists to use contextual singular and plural subheads
+ [Search](/search) now returns more useful results based on the title field

## 19 December 2016

Version: 2.2.0
Terms: 971
Sources: 90

### Summary of changes:

+ Added 22 new terms
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version 2.4.0
+ Fixed linespacing for inline code snippets

## 01 December 2016

Version: 2.1.1
Terms: 949
Sources: 90

### Summary of changes:

+ Added 30 new terms
+ Added 7 new sources
+ Updated and expanded dozens of existing entries
+ Updated [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) plugin to version 0.0.9
+ Numerical entries now appear at the top of the [terms](/terms) and [sources](/sources) pages
+ Focus is now automatically set on the [search](/search) field

## 27 October 2016

Version: 2.1.0
Terms: 919
Sources: 83

### Summary of changes:

+ Added 16 new terms
+ Added 2 new sources
+ Updated and expanded dozens of existing entries
+ Updated [Kirby](https://getkirby.com/) to version 2.3.2
+ Updated [Alphabetise](https://github.com/shoesforindustry/kirby-plugins-alphabetise) plugin to version 0.0.8