@@ -1,6 +1,6 @@
 		<footer>
 			<?php echo kirbytext($site->copyright() . "<br />" . $site->colophon()) ?>
 		</footer>
-
+		<?php echo snippet('ga'); ?>
 	</body>
 </html>
